Update lsgm environment

--- a/environment_lsgm.yaml
+++ b/environment_lsgm.yaml
@@ -1,13 +1,13 @@
 name: lsgm
 channels:
-  - pytorch-lts
+  - pytorch
   - conda-forge
   - defaults
 dependencies:
-  - pytorch=1.8.2
-  - torchvision
-  - torchaudio
-  - cudatoolkit=10.2
+  - pytorch=1.8.0
+  - torchvision=0.9.0
+  - torchaudio=0.8.0
+  - cudatoolkit=11.1
   - matplotlib
   - tensorboard
   - tensorboardx
