--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "LSGM"]
 	path = LSGM
 	url = https://github.com/tmarkmann/LSGM
+[submodule "stylegan2-ada"]
+	path = stylegan2-ada
+	url = https://github.com/mmorasch/stylegan2-ada
